[package]
name = "moon-engine"
version = "0.1.1"
authors = ["Alvin Philips <alvinphilips257@gmail.com>"]
description = "A WebGL2/WASM Game Library written in the Rust programming language."
edition = "2021"
license = "MIT"
repository = "https://github.com/polarvoid/moon-engine"
readme = "../README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.79"
js-sys = "0.3.59"
nalgebra = "0.31.0"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dependencies.web-sys]
version = "0.3.56"
features = [
    'Document',
    'Element',
    'Window',
    'KeyboardEvent',
    'Performance',
    'HtmlCanvasElement',
    'HtmlImageElement',
    'WebGl2RenderingContext',
    'WebGlProgram',
    'WebGlShader',
    'WebGlTexture',
    'WebGlBuffer',
    'WebGlVertexArrayObject',
    'WebGlUniformLocation',
]

[dev-dependencies]
wasm-bindgen-test = "0.3.29"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
